  - forms can be submitted by Enter (lukas)
  - BTS#0000460: fixed "call to a member function ..." in mailing.php (alec)
  - fixed item's name escaping and 'cash' value on credit notes (alec)
  - propably fixed neverending story about bugs with MySQL and polish
    characters and UTF-8. Added info in documentation how to create
    database with polish collation and utf8 character set (alec)
    
version 1.7.3 Inubis (2005-10-05):

  - contrib/customer: removed directories checking (alec)
  - changed access right definition for LMS configuration (alec)
  - security bugfix: plain text passwords aren't stored in session (alec)
  - security bugfix: session is excluded from database backup (alec)
  - **********************************************************************
    finances revolution: removed prepayments, unpaid covenants,
    any cash references and related features,
    invoices can't be paid, but only can be checked as accounted
    added filter 'hide accounted' on Invoices List (alec) 
    **********************************************************************
  - fixed round-off method on Invoices Report (alec)
  - daemon configuration moved to menu Configuration (alec)
  - changed table name 'daemonhosts' to 'hosts' (alec)
  - lmsd/parser: changed tscript's API, added extensions: deletefile, 
    readfile, getfile, listdir, fileexists, date, replace, systype (alec)
  - Credit Notes - WARNING! Invoice templates has been changed (alec)
  - Cygwin support for lmsd (lexx)
  - lmsd/dhcp,ethers,hostfile: fixes for sparc64 architecture (alec)
  - documentation: added pure-ftpd and accounts how-to (bart)
  - added public IP support in 'network' filter on Customers List (alec)
  - customer documents generation engine/wizards (alec)
  - removed option 'contract_template' (alec)
  - improved default document (contract) template (alec)
  - Userpanel menu instead of Configuration -> Userpanel (Mad Mark)